--- a/학원/2월 4주차/3월 2일.MD
+++ b/학원/2월 4주차/3월 2일.MD
@@ -10,11 +10,19 @@
 - 학습내용 :
 1) 클래스 안에 변수, 생성자, 메소드의 종류와 특징을 이해
 2) 오버라이딩의 개념을 이해
-3) this, this()의 차이를 이해할 수 있따
+3) this, this()의 차이를 이해할 수 있
 
 - 공지사항 : 포트폴리오
 
 ------------------------------------------------------------------------------------------------------------
+
+## 새로 알게된 것
+- return d1.int 가 안되는 이유
+
+반환 타입이 Data인데 d1.int를 하려면 int add(Data d1, Data d2) 이런식으로 해줘야함!!!
+
+- this() 키워드는 메서드에서 다시 가져올때 제일 위에 하나만 가능하다!!! super
+
 
 ### 절차지향 vs 객체지향
 - 절차지향 : 작업의 ***순서*** 표현, 작업을 함수로 작성한 함수들의 집함
@@ -89,6 +97,103 @@ public class V3_매개변수Ex2 {
 		for(int value: score) {
 			System.out.println(value);
 		}
+	}
+}
+
+```
+
+### 메소드 객체전달에서 좋았던 예제
+- 객체지향을 이해하기 좋았다
+- return d1.int 가 안되는 이유
+반환 타입이 Data인데 d1.int를 하려면 int add(Data d1, Data d2) 이런식으로 해줘야함!!!
+
+```java
+package step4_메소드;
+
+class Data{
+	int kor;
+	int eng;
+	
+	Data add(Data d1, Data d2) {
+//		d1.kor = d2.eng;
+		
+		d1.eng = d2.kor;
+		
+		System.out.println("d1.kor : " + d1.kor); // add(d2,d1) 으로하면 애초에 값이없으니 0 되는거고
+		System.out.println("d2.eng : " + d2.eng); // 아래에서는 그냥 출력하게되니까 80 0이 나오는건
+		
+		// d1객체만 리턴한다...
+		return d1; // 리턴값이 d1이니까 출력이 될수 없지
+	}
+}
+
+public class m2_객체전달 {
+	public static void main(String[] args) {
+		
+		// 1. 객체를 전달하려면... 객체가 준비가 되어야 한다.
+		Data d1 = new Data();
+		Data d2 = new Data();
+		Data d3 = new Data();
+		
+		d1.kor = 70;
+		d2.eng = 80;
+		
+		
+		//2. 메소드에 매개변수로 객체를 전달한다.
+		Data d4 = d3.add(d2,d1);   // eng 변수에 80을 넣고 , kor 변수에 70을 넣음) , 근데 위에서는 kor eng를 원하니 무시
+		System.out.println("***********************");
+		System.out.println(d4.eng);
+		System.out.println(d4.kor);
+	}
+}
+```
+
+### this() 키워드는 신기하다
+```java
+package step3_생성자;
+
+/*
+	this vs this()
+	
+	this : 내 자신의 객체
+	this() : 나의 생성자를 호출 , 오버로딩방식 호출, 첫줄에 작성해야 한다.
+	super :
+	super() : 
+	
+
+*/
+
+class Sonata {
+	
+	// 생성자 - 기본생성자, 초기화, void를 사용하지 않고, return도 없다.
+	Sonata() {}
+	
+	Sonata(int num) {
+		System.out.println("자동차 도어 수는 " + num + "개 입니다.");
+	}
+	
+	Sonata(String color) {
+		System.out.println("자동차의 색상은" + color + "색 입니다.");
+	}
+	
+	Sonata(int num, String option) {
+		this(num); // 정수 하나짜리를 실행하고 다시 내려와서 아래꺼 실행
+		System.out.println("옵션은 " + option + " 입니다.");
+	}
+	
+}
+
+
+public class C1_Constructor {
+	public static void main(String[] args) {
+		
+		Sonata car1 = new Sonata();
+//		Sonata car2 = new Sonata(2);
+//		Sonata car3 = new Sonata("그린");
+		Sonata car4 = new Sonata(4, "에어백");
+		
+		
+		
 	}
 }
 
