--- a/학원/2월 4주차/3월 2일.MD
+++ b/학원/2월 4주차/3월 2일.MD
@@ -198,3 +198,266 @@ public class C1_Constructor {
 }
 
 ```
+
+### 초기화, 클래식, 생성자, 매개변수 있는 생성자 등 순서
+```java
+class Product {
+	// 초기화 블럭
+	{
+		System.out.println("1. 초기화 블럭");
+	}
+	
+	// 클래스 초기화 블럭
+	static {
+		System.out.println("2. 클래식 초기화 블럭");
+	}
+	
+	// 생성자 초기화
+	public Product() {
+		System.out.println("3. 생성자 블럭");
+	}
+	
+	Product(int x) {
+		System.out.println("4. 매개변수 있는 생성자");
+	}
+	
+	// 메서드
+	void print() {
+		System.out.println("메소드-기능담당, 함수의 기능을 한다.");
+	}
+	
+}
+
+public class C4_생성자초기화학습 {
+	public static void main(String[] args) {
+		
+		Product p1 = new Product();
+		System.out.println("*************");
+		
+		Product p2 = new Product();
+		System.out.println("*************");
+		
+		Product p3 = new Product();
+		System.out.println("*************");
+		
+		p1.print();
+		p2.print();
+		p3.print();
+		
+	}
+
+}
+// 출력시
+
+// 2. 클래식 초기화 블럭
+//1. 초기화 블럭
+// 3. 생성자 블럭
+// *************
+// 1. 초기화 블럭
+// 3. 생성자 블럭
+// *************
+// 1. 초기화 블럭
+// 3. 생성자 블럭
+// *************
+// 메소드-기능담당, 함수의 기능을 한다.
+// 메소드-기능담당, 함수의 기능을 한다.
+// 메소드-기능담당, 함수의 기능을 한다.
+```
+
+# 문제 해보기
+```java
+package step3_생성자;
+
+import java.util.Scanner;
+
+// 학생이름, 국어점수, 수학점수, 영어점수
+
+// 생성자를 활용해서 필드를 초기화 시킨다
+
+// print() 메소드에서
+/*
+ 
+ 	홍길동님
+ 	국어: 80, 영어 75, 수학 99 (int)
+ 	총점 : 200점 (int)
+ 	평균 : 80.1점 (double)
+ 
+ */
+
+class Student {
+	String name;
+	
+//	Student(String name) {
+//		this.name = name;
+//	}
+}
+
+class Score {
+	
+	
+	int kor;
+	int mat;
+	int eng;
+	
+	Score add(Score p1, Score p2, Score p3) {
+		int sum = 0;
+		
+		sum += p1.kor + p2.mat + p3.eng;
+		
+		return Score;
+	}
+	
+	void result(Student st, Score p1, Score p2, Score p3) {
+		
+		 
+	}
+	
+}
+
+public class C5_국영수합계평균출력 {
+	public static void main(String[] args) {
+		
+		// 홍길동님	 이순신 강감찬 결과출력
+		
+		Scanner sc = new Scanner(System.in);
+		
+		
+		Student st = new Student();
+		st.name = "홍길동";
+		
+		Score p1 = new Score();
+		Score p2 = new Score();
+		Score p3 = new Score();
+		
+		int kor = p1.kor = 80;
+		int mat = p2.mat = 70;
+		int eng = p3.eng = 60;
+		
+		
+		
+		
+		
+		
+	}
+}
+```
+
+## 참고할것
+```java
+package step4_메소드;
+
+class Student {
+	String name;
+}
+
+class Data{
+	int kor;
+	int eng;
+	
+	Data add(Data d1, Data d2) {
+		d1.kor = d2.eng;
+		
+//		d1.eng = d2.kor;
+		
+		System.out.println("d1.kor : " + d1.kor); // add(d2,d1) 으로하면 애초에 값이없으니 0 되는거고
+		System.out.println("d2.eng : " + d2.eng); // 아래에서는 그냥 출력하게되니까 80 0이 나오는건
+		
+		// d1객체만 리턴한다...
+		return d1; // 리턴값이 d1이니까 출력이 될수 없지
+	}
+	
+	Student add(Data d1, Data d2, Student st) {
+		
+		System.out.println(st.name);
+		st.name += "님";
+		
+		return st;
+	}
+	
+}
+
+public class M2_객체전달 {
+	public static void main(String[] args) {
+		
+		// 1. 객체를 전달하려면... 객체가 준비가 되어야 한다.
+		Data d1 = new Data();
+		Data d2 = new Data();
+		Data d3 = new Data();
+		
+		d1.kor = 70;
+		d2.eng = 80;
+		
+		
+		//2. 메소드에 매개변수로 객체를 전달한다.
+		Data d4 = d3.add(d1,d2);   // eng 변수에 80을 넣고 , kor 변수에 70을 넣음) , 근데 위에서는 kor eng를 원하니 무시
+		System.out.println("***********************");
+		System.out.println(d4.kor);
+		System.out.println(d4.eng);
+		
+		System.out.println("***********************");
+		
+		Student st = new Student();
+		Data d5 = new Data();
+		d5.add(d1, d2,st);
+		
+		Student k = d5.add(d1, d2, st);
+		System.out.println(k.name);
+		
+		
+	}
+}
+```
+
+## 참고할것2
+```java
+package step3_생성자;
+
+import java.util.Scanner;
+
+class Shape {
+	
+	
+	int w;
+	int h;
+	int d;
+	int y;
+	
+	Shape() {}
+	
+	Shape(int w){
+		System.out.println("정사각형의 넓이는 " + w*w + " 입니다.");
+	}
+	
+	Shape(int w, int h) {
+		this(w);
+		System.out.println("직사각형의 넓이는" + w*h + " 입니다.");
+	}
+	
+	Shape(int w, int h, int d) {
+		this(w,h);
+		System.out.println("직육면체의 부피는 " + w*h*d + " 입니다.");
+	}
+	
+	
+	
+	// 정사각형의 너비를 출력하는 메서드 (w)
+	
+	// 직사각형의 넓이를 출력하는 생성자 (w,h)
+	
+	// 직육면체의 부피를 출력하는 생성자 (w,h,d)
+	
+}
+
+public class C2_Rectangle {
+	public static void main(String[] args) {
+		
+		// 객체를 생성해서 출력하시오
+		
+		Scanner sc = new Scanner(System.in);
+		
+		Shape shape = new Shape(3, 5, 4);
+		
+	}
+}
+
+```
