--- a/학원/2월 4주차/3월 2일.MD
+++ b/학원/2월 4주차/3월 2일.MD
@@ -461,3 +461,66 @@ public class C2_Rectangle {
 }
 
 ```
+
+# 푼것
+```java
+package Prac;
+
+import java.util.Scanner;
+
+
+class Grade {
+	
+	String name;
+	int kor;
+	int mat;
+	int eng;
+	
+	Grade() {}
+	
+	void cacul(String name,int a, int b, int c) {
+		
+		String named = name;
+		int sum = a+b+c;
+		double ave = (double)(sum) / (double)3;
+		System.out.println(named + "의 총점은 : " + sum + "점 입니다.");
+		System.out.printf("%s의 평균은 : %.1f점 입니다.", named, ave);
+		
+		
+	}
+	
+//	void result() {
+//		Scanner avesc = new Scanner(System.in);
+//		System.out.println("학생의 이름, 국어,수학,영어 점수를 순서대로 입력해주세요.");
+////		this.cacul(avesc.nextInt(), avesc.nextInt(), avesc.nextInt(), avesc.next());
+//	}
+}
+
+public class Prac {
+	public static void main(String[] args) {
+		
+		Scanner sc = new Scanner(System.in);
+		
+//		System.out.println("학생의 이름을 적어주세요");
+		
+//		Student st1 = new Student();
+//		st1.name = sc.next();
+		
+//		Student st2 = new Student();
+//		st2.name = sc.next();
+//		
+//		Student st3 = new Student();
+//		st3.name = sc.next();
+		
+		Grade stugrade1 = new Grade();
+		
+		System.out.println("이름, 국어 점수, 수학 점수, 영어 점수 입력해주세요.");
+		stugrade1.cacul(sc.nextLine(),sc.nextInt(), sc.nextInt(), sc.nextInt());
+		
+//		System.out.println("국어 점수, 수학 점수, 영어 점수 입력해주세요.");	
+		
+		
+	}
+}
+
+```
