--- a/3월 1주차/3월 3일.MD
+++ b/3월 1주차/3월 3일.MD
@@ -1,1 +1,22 @@
-# 시작작작
+### Review
+필드
+- 멤버변수
+- 정적변수(클래스변수, static변수)
+- 전역변수 / 지역변수
+- 변수는 초기화 블록/static블록에 의해 초기화 할 수 있고 생성자나, set메소드를 활용하여 초기화 할 수 있다.
+
+생성자
+- 기본 생성자는 자동으로 생성해 준다.
+- Return타입이 없다(void를 사용하면 안된다)
+- 객체생성시 한번만 호출된다.
+- 객체생성과 초기화의 역할을 한다.
+- ***오버라이딩***으로 호출할 수 있다.
+- this()를 활용 자신의 다른 생성자를 호출할 수 있다.
+- 이때, ***첫 문장***에 작성되어야 한다.
+
+메소드
+- void 또는 return타입을 명시해야 한다.
+- ***오버라이딩***으로 호출할 수 있다.
+- 배열, 객체의 전달에 대해 이해해야 한다.
+- ***this***는 내 자신의 객체를 말한다.
+- 호출한 곳으로 돌아가라는 의미로 return만 사용될 수 있다.
