--- a/3월 1주차/3월 3일.MD
+++ b/3월 1주차/3월 3일.MD
@@ -20,3 +20,146 @@
 - 배열, 객체의 전달에 대해 이해해야 한다.
 - ***this***는 내 자신의 객체를 말한다.
 - 호출한 곳으로 돌아가라는 의미로 return만 사용될 수 있다.
+
+## 오늘의 학습목표
+학습 내용
+- ***객체배열***을 생성할 수 있고 객체배열을 메소드에 전달 할 수 있다.
+- 접근지정자를 적용할 수 있다.
+- static을 이해하고 활용할 수 있다.
+- 클래스작성 및 이를 활용한 응용예제를 실습해 본다.
+
+공지 사항
+- 포트폴리오 3/10
+
+------------------------------------------------------------------------------------------------------------
+
+### 새롭게 알게된것
+- source - getter, setter를 누르면 편하게 get set 만들수 있다 ( 단축키 alt + shf + s )
+- 팩토리얼 문제 내가 나를 부르는 함수다 ***재귀함수***
+
+재귀함수
+```java
+class Factorial {
+	
+	int result = 1;
+	void factorial(int cnt) {
+		if(cnt == 1) {
+			System.out.println("1= " + result);
+		} else {
+			System.out.print(cnt + "*");
+			result = result * cnt;
+			this.factorial(--cnt); // 내가 나를 부르는 함수다 재귀함수
+		}
+	}
+}
+
+
+public class M6_FactorialEx {
+	public static void main(String[] args) {
+		
+		Factorial f = new Factorial(); // 이게 반복문이 되네; 신기하다
+		
+		f.factorial(5);
+		
+	}
+}
+```
+
+### 객체배열 연습
+```java
+package step4_메소드;
+
+import java.util.Scanner;
+
+class Items {
+	String 상품명;
+	int 가격;
+	int 판매량;
+	int 재고량;
+	
+	Items(String 상품명, int 가격, int 판매량, int 재고량) {
+		this.상품명 = 상품명;
+		this.가격 = 가격;
+		this.판매량 = 판매량;
+		this.재고량 = 재고량;
+	} 
+	
+	String getName() {
+		return 상품명;
+	}
+	
+	int getPrice() {
+		return 가격;
+	}
+	
+	int getSold() {
+		return 판매량;
+	}
+	
+	int getStock() {
+		return 재고량;
+	}
+}
+
+class Management {
+	
+	int totalSale(Items[] arr) {
+		
+		int sum = 0;
+		for(int i=0;i<arr.length;i++) {
+			sum = sum + arr[i].판매량 * arr[i].가격;
+		}
+		return sum;
+	}
+}
+
+public class M7_객체배열 {
+	public static void main(String[] args) {
+		
+		Items[] items = new Items[3]; // 3개만 등롟
+ 		
+		System.out.println("제품현황을 등록합니다.");
+		Scanner sc = new Scanner(System.in);
+		
+		for(int i=0;i<items.length;i++) {
+			System.out.println("*****" + (i+1) + "번째 상품을 등록합니다*****");
+			
+			String name = null;
+			int price=0, salesVolume=0,stock=0;
+
+			try {
+				System.out.println("상품명> ");
+				name = sc.next();
+				System.out.println("가격> ");
+				price = sc.nextInt();
+				System.out.println("판매량> ");
+				salesVolume = sc.nextInt();
+				System.out.println("재고량> ");
+				stock = sc.nextInt();
+				
+			} catch(IndexOutOfBoundsException e) {
+				System.out.println("범위를 초과했습니다.");
+			}
+			Items item = new Items(name, price, salesVolume, stock);
+			items[i] = item;
+
+			
+		}
+		
+		for(Items goods:items) {
+			System.out.println("상품명: " + goods.getName());
+			System.out.println("가격: " + goods.가격);
+			System.out.println("판매량: " + goods.판매량);
+			System.out.println("재고량: " + goods.재고량);
+		}
+		
+		sc.close();
+		
+		Management m = new Management();
+		int sum = m.totalSale(items);
+		System.out.println("총 매출액은: " + sum + "원 입니다.");
+		
+	}
+}
+```
+
