--- a/3월 1주차/3월 3일.MD
+++ b/3월 1주차/3월 3일.MD
@@ -163,3 +163,96 @@ public class M7_객체배열 {
 }
 ```
 
+### 못풀었던 문제... 해결하기
+- 자바 상속 전까지 객체지향의 모습을 깊게 볼 수 있었음
+- 배열인지 아닌지 
+
+```java
+package step4_메소드;
+
+import java.util.Scanner;
+
+class Student4 {
+	String name;
+	int age;
+	String tel;
+	
+	public Student4() {}
+	
+	Student4(String name, int age, String tel) {
+		this.name = name;
+		this.age = age;
+		this.tel = tel;
+	}
+}
+
+class 학생관리3 {
+	
+	int size;
+	
+	Student4[] st;
+	
+	학생관리3(int size) {
+		Student4[] st = new Student4[size];
+	}
+	
+	void register(Student4[] stArr) {
+		
+		st = stArr;
+		
+	}
+	
+	Student4[] getStudentArr() {
+		return st;
+	}
+}
+
+
+
+public class M8_학생관리ExPrac {
+
+	public static void main(String[] args) {
+		Scanner sc = new Scanner(System.in);
+		
+		System.out.println("학생 수를 입력해주세요.");
+		
+		int size = sc.nextInt();
+		
+		Student4[] student = new Student4[size];
+		
+		for(int i=0;i<size;i++) {
+			System.out.println((i+1) + "번 학생을 등록합니다");
+			
+			System.out.println("이름을 입력");
+			String name = sc.next();
+			
+			System.out.println("나이를 입력");
+			int age = sc.nextInt();
+			
+			System.out.println("번호를 입력");
+			String tel = sc.next();
+			
+			Student4 stu = new Student4(name, age, tel);
+			
+			student[i] = stu;				
+		}
+		
+		학생관리3 m = new 학생관리3(size);
+		
+		m.register(student);
+		
+		Student4[] st = m.getStudentArr();
+		
+		for(Student4 s: st) {
+			System.out.println("이름: " + s.name);
+			System.out.println("나이: " + s.age);
+			System.out.println("연락처: " + s.tel);
+			System.out.println("********************");
+		}
+		
+		
+	}
+
+}
+
+```
