--- a/3월 1주차/3월 3일.MD
+++ b/3월 1주차/3월 3일.MD
@@ -165,7 +165,7 @@ public class M7_객체배열 {
 
 ### 못풀었던 문제... 해결하기
 - 자바 상속 전까지 객체지향의 모습을 깊게 볼 수 있었음
-- 배열인지 아닌지 
+- 배열인지 아닌지 잘 알
 
 ```java
 package step4_메소드;
@@ -256,3 +256,77 @@ public class M8_학생관리ExPrac {
 }
 
 ```
+
+public 없으면 다른 패키지에서 사용 불가능 <<<<<
+
+###static 변수, 메서드
+- staic은 실행하면 가장 먼저 올라감
+- 남발하면 메모리 낭비
+- 조심해야한다.
+- 객체값을 공유하기 때문에 관리 잘해줘야한다.
+- static 안에 static은 불가
+- this도 불가
+```java
+package step6_Static;
+
+class StaticVar {
+	
+	String name; // default 접근지정자
+	static String address; // 클래스변수, 정적변수, static변수
+	
+	void setName(String name) {
+		this.name = name;
+	}
+	
+	// 클래스메서드(정적메서드, static메서드)
+	static void print() {
+		address = "마포";
+//		name = "마포"  // 안되는 이유 static는 메모리에 이미 올라가서 실행가능한데 얘는 따로 값을 만들어주지 않았기에  아직 메모리에 없음
+//		this.setName("금요일"); // static 안에서는 this도 쓸수 없음 정적메서드는 고정임!!
+		
+		int age = 30;
+//		static String tel = "010-3333-3333"; // static 안에 static은 불가함
+
+	}
+	
+}
+
+public class Static1_정적변수 {
+	public static void main(String[] args) {
+		
+		// 객체 생성전
+		StaticVar.address = "영등포";
+		StaticVar.print();
+		
+		//StaticVar.setName("홍길동"); 밑에처럼 생성자값 만들어줘야 사용가능
+		StaticVar st = new StaticVar();
+		st.setName("길동");
+		String name = st.name;
+		
+		
+	}
+}
+
+```
+
+## 과제 , 이거랑 사진찍은 문제
+```java
+package step4_메소드;
+
+/*
+  계산기 프로그램을 구현하시오
+  class Add()
+  class Sub()
+  class Mul()
+  class Div()
+  
+  Ex {
+  	// 두 정수와 연산자를 입력받아서
+  	// switch문으로 연산처리한다.
+
+*/
+public class CaculPrac {
+
+}
+```
+
