--- a/3월 2주차/3월 3일.MD
+++ b/3월 2주차/3월 3일.MD
@@ -1,1 +1,335 @@
+### Review
+필드
+- 멤버변수
+- 정적변수(클래스변수, static변수)
+- 전역변수 / 지역변수
+- 변수는 초기화 블록/static블록에 의해 초기화 할 수 있고 생성자나, set메소드를 활용하여 초기화 할 수 있다.
 
+생성자
+- 기본 생성자는 자동으로 생성해 준다.
+- Return타입이 없다(void를 사용하면 안된다)
+- 객체생성시 한번만 호출된다.
+- 객체생성과 초기화의 역할을 한다.
+- ***오버라이딩***으로 호출할 수 있다.
+- this()를 활용 자신의 다른 생성자를 호출할 수 있다.
+- 이때, ***첫 문장***에 작성되어야 한다.
+
+메소드
+- void 또는 return타입을 명시해야 한다.
+- ***오버라이딩***으로 호출할 수 있다.
+- 배열, 객체의 전달에 대해 이해해야 한다.
+- ***this***는 내 자신의 객체를 말한다.
+- 호출한 곳으로 돌아가라는 의미로 return만 사용될 수 있다.
+
+## 오늘의 학습목표
+학습 내용
+- ***객체배열***을 생성할 수 있고 객체배열을 메소드에 전달 할 수 있다.
+- 접근지정자를 적용할 수 있다.
+- static을 이해하고 활용할 수 있다.
+- 클래스작성 및 이를 활용한 응용예제를 실습해 본다.
+
+공지 사항
+- 포트폴리오 3/10
+
+------------------------------------------------------------------------------------------------------------
+
+### 새롭게 알게된것
+- source - getter, setter를 누르면 편하게 get set 만들수 있다 ( 단축키 alt + shf + s )
+- 팩토리얼 문제 내가 나를 부르는 함수다 ***재귀함수***
+
+재귀함수
+```java
+class Factorial {
+	
+	int result = 1;
+	void factorial(int cnt) {
+		if(cnt == 1) {
+			System.out.println("1= " + result);
+		} else {
+			System.out.print(cnt + "*");
+			result = result * cnt;
+			this.factorial(--cnt); // 내가 나를 부르는 함수다 재귀함수
+		}
+	}
+}
+
+
+public class M6_FactorialEx {
+	public static void main(String[] args) {
+		
+		Factorial f = new Factorial(); // 이게 반복문이 되네; 신기하다
+		
+		f.factorial(5);
+		
+	}
+}
+```
+
+### 객체배열 연습
+```java
+package step4_메소드;
+
+import java.util.Scanner;
+
+class Items {
+	String 상품명;
+	int 가격;
+	int 판매량;
+	int 재고량;
+	
+	Items(String 상품명, int 가격, int 판매량, int 재고량) {
+		this.상품명 = 상품명;
+		this.가격 = 가격;
+		this.판매량 = 판매량;
+		this.재고량 = 재고량;
+	} 
+	
+	String getName() {
+		return 상품명;
+	}
+	
+	int getPrice() {
+		return 가격;
+	}
+	
+	int getSold() {
+		return 판매량;
+	}
+	
+	int getStock() {
+		return 재고량;
+	}
+}
+
+class Management {
+	
+	int totalSale(Items[] arr) {
+		
+		int sum = 0;
+		for(int i=0;i<arr.length;i++) {
+			sum = sum + arr[i].판매량 * arr[i].가격;
+		}
+		return sum;
+	}
+}
+
+public class M7_객체배열 {
+	public static void main(String[] args) {
+		
+		Items[] items = new Items[3]; // 3개만 등롟
+ 		
+		System.out.println("제품현황을 등록합니다.");
+		Scanner sc = new Scanner(System.in);
+		
+		for(int i=0;i<items.length;i++) {
+			System.out.println("*****" + (i+1) + "번째 상품을 등록합니다*****");
+			
+			String name = null;
+			int price=0, salesVolume=0,stock=0;
+
+			try {
+				System.out.println("상품명> ");
+				name = sc.next();
+				System.out.println("가격> ");
+				price = sc.nextInt();
+				System.out.println("판매량> ");
+				salesVolume = sc.nextInt();
+				System.out.println("재고량> ");
+				stock = sc.nextInt();
+				
+			} catch(IndexOutOfBoundsException e) {
+				System.out.println("범위를 초과했습니다.");
+			}
+			Items item = new Items(name, price, salesVolume, stock);
+			items[i] = item;
+
+			
+		}
+		
+		for(Items goods:items) {
+			System.out.println("상품명: " + goods.getName());
+			System.out.println("가격: " + goods.가격);
+			System.out.println("판매량: " + goods.판매량);
+			System.out.println("재고량: " + goods.재고량);
+		}
+		
+		sc.close();
+		
+		Management m = new Management();
+		int sum = m.totalSale(items);
+		System.out.println("총 매출액은: " + sum + "원 입니다.");
+		
+	}
+}
+```
+
+### 못풀었던 문제... 해결하기
+- 자바 상속 전까지 객체지향의 모습을 깊게 볼 수 있었음
+- 배열인지 아닌지 잘 알
+
+```java
+package step4_메소드;
+
+import java.util.Scanner;
+
+class Student4 {
+	String name;
+	int age;
+	String tel;
+	
+	public Student4() {}
+	
+	Student4(String name, int age, String tel) {
+		this.name = name;
+		this.age = age;
+		this.tel = tel;
+	}
+}
+
+class 학생관리3 {
+	
+	int size;
+	
+	Student4[] st;
+	
+	학생관리3(int size) {
+		Student4[] st = new Student4[size];
+	}
+	
+	void register(Student4[] stArr) {
+		
+		st = stArr;
+		
+	}
+	
+	Student4[] getStudentArr() {
+		return st;
+	}
+}
+
+
+
+public class M8_학생관리ExPrac {
+
+	public static void main(String[] args) {
+		Scanner sc = new Scanner(System.in);
+		
+		System.out.println("학생 수를 입력해주세요.");
+		
+		int size = sc.nextInt();
+		
+		Student4[] student = new Student4[size];
+		
+		for(int i=0;i<size;i++) {
+			System.out.println((i+1) + "번 학생을 등록합니다");
+			
+			System.out.println("이름을 입력");
+			String name = sc.next();
+			
+			System.out.println("나이를 입력");
+			int age = sc.nextInt();
+			
+			System.out.println("번호를 입력");
+			String tel = sc.next();
+			
+			Student4 stu = new Student4(name, age, tel);
+			
+			student[i] = stu;				
+		}
+		
+		학생관리3 m = new 학생관리3(size);
+		
+		m.register(student);
+		
+		Student4[] st = m.getStudentArr();
+		
+		for(Student4 s: st) {
+			System.out.println("이름: " + s.name);
+			System.out.println("나이: " + s.age);
+			System.out.println("연락처: " + s.tel);
+			System.out.println("********************");
+		}
+		
+		
+	}
+
+}
+
+```
+
+public 없으면 다른 패키지에서 사용 불가능 <<<<<
+
+###static 변수, 메서드
+- staic은 실행하면 가장 먼저 올라감
+- 남발하면 메모리 낭비
+- 조심해야한다.
+- 객체값을 공유하기 때문에 관리 잘해줘야한다.
+- static 안에 static은 불가
+- this도 불가
+```java
+package step6_Static;
+
+class StaticVar {
+	
+	String name; // default 접근지정자
+	static String address; // 클래스변수, 정적변수, static변수
+	
+	void setName(String name) {
+		this.name = name;
+	}
+	
+	// 클래스메서드(정적메서드, static메서드)
+	static void print() {
+		address = "마포";
+//		name = "마포"  // 안되는 이유 static는 메모리에 이미 올라가서 실행가능한데 얘는 따로 값을 만들어주지 않았기에  아직 메모리에 없음
+//		this.setName("금요일"); // static 안에서는 this도 쓸수 없음 정적메서드는 고정임!!
+		
+		int age = 30;
+//		static String tel = "010-3333-3333"; // static 안에 static은 불가함
+
+	}
+	
+}
+
+public class Static1_정적변수 {
+	public static void main(String[] args) {
+		
+		// 객체 생성전
+		StaticVar.address = "영등포";
+		StaticVar.print();
+		
+		//StaticVar.setName("홍길동"); 밑에처럼 생성자값 만들어줘야 사용가능
+		StaticVar st = new StaticVar();
+		st.setName("길동");
+		String name = st.name;
+		
+		
+	}
+}
+
+```
+
+## 과제 , 이거랑 사진찍은 문제
+```java
+package step4_메소드;
+
+/*
+  계산기 프로그램을 구현하시오
+  class Add()
+  class Sub()
+  class Mul()
+  class Div()
+  
+  Ex {
+  	// 두 정수와 연산자를 입력받아서
+  	// switch문으로 연산처리한다.
+
+*/
+public class CaculPrac {
+
+}
+```
+
+1. 계산기
+2. 성적처리 프로그램
+3. 학생/선생/관리자 ... 객체로 만들어 활용연습하시오
