--- a/3월 2주차/3월 6일.MD
+++ b/3월 2주차/3월 6일.MD
@@ -1,1 +1,348 @@
+### Review
+객체배열
+- 클래스를 저장할 수 있는 객체를 생성한다.
+- 클래스의 객체를 생성한다.
+- 배열속에 객체를 저장한다.
+- 객체 배열을 필요로 하는 메소드에 객체배열을 인수로 해서 호출한다.
+- 메소드에서 받아서 필요한 비즈니스 로직을 처리한다.
 
+클래스 생성자에서 객체나 배열 초기화
+
+static
+- static은 객체 간에 공유되고,
+- 클래스명. static변수/클래스명.static메소드로 직접 호출이 가능하다.
+- static 클래스 속에는 밖에 선언된 static 필드/메소드만 호출 가능하다.
+- static 클래스 속에서 멤버변수/멤버 메소드를 선언하여 생성할 수 있지만, static변수/static메소드를 선언하여 생성할 수 없다.
+
+
+## 오늘의 학습목표
+학습 내용
+- 상속의 개념을 이해하고 구현할 수 있다.
+- 상속관계에서 업캐스팅/다운캐스팅을 구현할 수 있다.
+- 오버라이딩을 구현할 수 있다.
+- 클래스 다이어그램을 작성할 수 있다.
+
+공지사항
+- 포트폴리오
+
+--------------------------------------------------------------------------------
+
+## 같은 파일에 클래스가 여러개일때 public은 1개여야함
+
+### 상속(inheritance) 문법
+- 단일 상속만 가능하다.
+- 상속이 되면, 부모의 필드와 메소드를 자식이 자기 것처럼 접근할 수 있다.
+- 생성자는 상속되지 않는다.
+- 부몰르 Super라고 부른다. - super, super() 가 있다.
+- 자식에서 객체를 생성하면, 부모의 기본 생성자를 찾으며 올라간다.
+- 부모의 메소드는 자식이 재정의(Override)할 수도 있다.
+
+### 새롭게 알게된것
+- 자식클래스에서 기본생성자는 부모생성자의 기본클래스를 따라간다. 출력은 부모 - 자식 순으로 출력된다
+- (조부모-부모-자식) 순으로 된다면 조부모에서 값이 지정되어 있다면 그 값이 출력된다.
+
+
+
+상속에 관련해서 기본생성자가 왜 필요한지? 없으면 어떻게 구성해야 하는지 등을 알게 됨
+```java
+package step1_상속;
+
+class A1 {
+	int x;
+	A1(int x) {
+		this.x = x;
+		System.out.println("생성자A");
+	}
+}
+
+class B1 extends A1 {
+//	int x;
+//	B1() {}
+	B1(int x) {
+//		this.x = x;
+		super(10);
+		System.out.println("생성자B");
+	}
+}
+
+class C1 extends B1 {
+	C1(int x) {
+		super(10);   // 막아두면 기본생성자를 찾아가기에 상속 주는곳에서 기본생성자를 만들어주거나 얘를 만들어줘야함
+		System.out.println("생성자C");
+	}
+	
+//	C1(int x) {
+//		System.out.println("생성자C에 매개변수 1개");
+//	}
+	
+	void print() {
+		System.out.println("생성자 우선순위에 대한 학습");
+	}
+	
+}
+
+public class Inher3_생성자 {
+	public static void main(String[] args) {
+		
+		A1 a1 = new A1(10);
+		B1 b1 = new B1(10);
+		
+		C1 c = new C1(10); // 상속을 줄 부모 클래스에서 기본 메서드로 설정시 다 같이 나옴 그래서 매개변수를 넣어줘야 c값만 나옴
+		
+		
+	}
+}
+
+```
+
+배우기 좋았던 상속문제
+```java
+package step1_상속;
+
+class Parent {
+	int x = 100;
+	
+	public Parent() {
+		this(200);
+		System.out.println("이때 x값은 : " + x); // 100
+	}
+	
+	Parent(int x) {
+		
+		System.out.println("이떄 x값은 : " + this.x); // 200
+		this.x = x;
+		System.out.println("이때 x값은 : " + this.x); // 200
+	}
+	int getX() {
+		return x;
+	}
+}
+
+class Child extends Parent {
+	int x = 3000;
+	
+	Child() {				// 3
+		this(1000);         // 4 아 맞네 얘가 먼저 실행되네
+		System.out.println("이때 x값은 : " + x); // 3000      // 8
+	}
+	
+	Child(int x) {          // 5 
+//		super(50);
+		System.out.println("이때 x값은 : " + this.x); // 1000 // this.x라 하면 여전히 1000  // 6
+		this.x = x;
+		System.out.println("이떄 x값은 : " + this.x); // 1000 // 7
+	}
+	
+	int getY() {
+		return x;
+	}
+}
+
+public class Inher5 {
+	public static void main(String[] args) {
+		
+		Child c = new Child();
+		
+		System.out.println("**************");
+		System.out.println("x = " + c.getX());
+		System.out.println("y = " + c.getY());
+	}
+}
+
+```
+
+### 업캐스팅하면 자식에게 접근할수없음
+
+### 다운캐스팅하면 접근가능
+
+### 객체변수 instanceof 클래스
+상속관계에 있는지 확인할 수 있는 연산자이다.
+
+
+### 메소드 Overriding(부모 메서드를 자식이 재정의)
+- 슈퍼 클래스의 메서드를 서브 클래스에서 재정의 (슈퍼 클래스 메소드의 이름, 매개변수 타입 및 개수, 리턴 타입 등 모든 것 동일하게 작성)
+- 메소드 무시하기, 덮어쓰기로 번역되기도 함
+- 동적 바인딩 발생
+- 서브 클래스에 오버라이딩 된 메소드가 무조건 실행되는 동적 바인
+
+### 메서드 Overriding(부모 메서드를 자식이 재정의)
+- 부모의 메서드를 자식이 똑같은 메서드를 만들어서 재작성 한것
+- 업캐스팅 하고 오버라이딩을 해 놓으면 실행시 동적으로 바인딩된다.
+- 이때, 부모의 메서드를 호출하게 되면 자동으로 자식 메서드가 호출된다.
+- 오버라이딩에 있어 자식의 접근 지정자는 부모와 같거나 더 넓어야 한다. ( private default protected public, static은 staic이어야 한다. )
+- 오버라이딩된 자식 메서드는 부모의 것을 super.변수 , super.메서드()로 호출된다.
+
+### 자바 @override 어노테이션
+지금은 오타방지 정도로 알고 있기
+
+
+### 업캐스팅
+```java
+package step1_상속;
+
+class Car {	
+	String name = "자동차";
+	
+	void move() {
+		System.out.println("생생 달립니다.");
+	}	
+}
+
+class Bus extends Car {
+	String name = "버스";
+	
+	@Override // 이미 override 되어 있음
+	void move() {
+		System.out.println("40명을 태우고 생생 달립니다.");
+	}
+}
+
+class Ambulance extends Car {
+	String name = "엠뷸런스";
+	
+	@Override //
+	void move() {
+		System.out.println("싸이렌을 울리며 생생 달립니다.");
+	}
+	void special() {
+		System.out.println("환자를 태우고 있습니다.");
+	}
+}
+
+class FireEngine extends Car {
+	String name = "소방차";
+	
+	@Override //
+	void move() {
+		System.out.println("물을 뿌리며 이동합니다.");
+	}
+	
+	
+}
+
+public class Inher8_EX2 {
+	public static void main(String[] args) {
+		
+		Car[] car = new Car[3];
+		car[0] = new Bus();
+		car[1] = new Ambulance();
+		car[2] = new FireEngine();
+		
+		for(Car c : car) {
+			c.move(); // 생각해보니 메서드 안에서 println이 되어있는데 또 했네
+			
+			if(c instanceof Ambulance) {
+				Ambulance am = (Ambulance) c; // 다운캐스팅
+				am.special();
+			}
+		}
+	}
+}
+
+```
+
+### UML(Unified Modeling Language) 다이어그램 , 모델을 만드는 표준언어
+- 다른 사람들과의 의사소통 또는 설계논의
+- 전체 시스템의 구조 및 클래스의 의존성 파악
+- 유지보수를 위한 설계의 back-end 문서
+- 의존관계를 사용
+
+### 클래스 다이어그램
+- 클래스 다이어그램은 구조 다이어그램으로 클래스 내부 구성요소
+- 클래스 간의 관계를 도식화하여 시스템의 특정 모듈이나 일부 및 전체를 구조화
+- 개발 하기 전, 클래스 다이어그램을 그리게 되면 시스템 내 클래스 간의 의존성 파악
+- 팀원들 간 의사소통이 편리합니다.
+
+
+업.다운 캐스팅 알아보기 좋았던 예제
+- 왔다 갔다 하지만 이해하기엔 무리 없었다.
+```java
+package ExtendsPrac;
+
+class Car {
+	String name = "자동차";
+	
+	void move() {
+		System.out.println("생생 달린다.");
+	}
+}
+
+class Bus extends Car {
+	String name = "버스";
+	
+	@Override
+	void move() {
+		System.out.println("40명을 태우고 생생 달린다.");
+	}
+}
+
+class Ambul extends Car {
+	String name = "엠뷸";
+	
+	@Override
+	void move() {
+		System.out.println("싸이렌 울리며 달림");
+	}
+	
+	void special() {
+		System.out.println("환자 태움");
+	}
+}
+
+class FireEn extends Car {
+	String name = "소방";
+	
+	@Override
+	void move() {
+		System.out.println("물 뿌리며 달림");
+	}
+}
+
+class Carmanage {
+	Car print(Car c) {
+		
+		Ambul a = (Ambul)c; // 다운캐스팅
+		a.name = "긴급호송차";
+		
+		c = a; // 업캐스팅
+		
+		return c;
+	}
+}
+
+
+public class ExtendsPrac {
+
+	public static void main(String[] args) {
+		Car[] car = new Car[3];
+		car[0] = new Bus();
+		car[1] = new Ambul();
+		car[2] = new FireEn();
+		
+		for(Car c : car) {
+			c.move();
+			
+			if(c instanceof Ambul) {
+				Ambul am = (Ambul) c;
+				am.special();
+			}
+		}
+		
+		Ambul ab = new Ambul();
+		Carmanage cm = new Carmanage();
+		
+		Car mycar = cm.print(ab);
+		
+		// Ambul 값 출력
+		
+		Ambul a = (Ambul)mycar; // 다운캐스팅
+		
+		
+		System.out.println(a.name);
+		
+	}
+
+}
+```
+
+업캐스팅, 다운캐스팅 왔다갔다는 잘 이해가 됐다.
