--- a/3월 2주차/3월 7일.MD
+++ b/3월 2주차/3월 7일.MD
@@ -1,1 +1,19 @@
+### Review
+객체배열
+- 클래스를 저장할 수 있는 객체를 생성한다.
 
+
+클래스 생성자에서 객체나 배열 초기화
+
+
+
+
+## 오늘의 학습목표
+학습 내용
+- 상속의 개념을 이해하고 구현할 수 있다.
+
+
+공지사항
+- 포트폴리오
+
+--------------------------------------------------------------------------------
