--- a/3월 2주차/3월 7일.MD
+++ b/3월 2주차/3월 7일.MD
@@ -1,19 +1,145 @@
 ### Review
-객체배열
-- 클래스를 저장할 수 있는 객체를 생성한다.
+상속
+- 부모의 필드와 메소드는 자식의 것이 된다.
+- 상속관계의 객체를 생성하는 순서는 명시적이지 않을 때는 기본생성자를 찾아 올라간다.
+- 생성중에 super(), this()로 명시화 하면 ***우선 처리*** 된다.
+- UpCasting 하면... 부모의 것에만 접근 가능하다.
+- DownCasting하면... 부모의 것에만 접근 가능하다.
 
+오버라이딩
+- 부모의 메서드를 자식이 재 구현한 것을 말하며
+- 자식의 것만 호출된다.
 
-클래스 생성자에서 객체나 배열 초기화
-
-
-
+동적바인딩
+- 업캐스팅 된 상태에서 부모의 메서드가 자식에서 재구현 되었다면
+- 부모의 메서드를 호출하면 자식의 메서드가 호출된다.
 
 ## 오늘의 학습목표
 학습 내용
-- 상속의 개념을 이해하고 구현할 수 있다.
-
+- ***추상클래스*** 를 이해하고 구현할 수 있다.
+- ***인터페이스*** 를 이해하고 구현할 수 있다.
+- ***포함관계***를 구현할 수 있다.
 
 공지사항
 - 포트폴리오
 
 --------------------------------------------------------------------------------
+
+상속관계
+- a는 b이다
+
+포함관계
+- a는 b를 가지고 있다.
+
+
+상속에 관해서 잘 볼 수 있었던 문제 (포함)
+```java
+package step1_상속;
+
+class Shape2 {
+	
+	Shape2 next;
+	
+	void draw() {
+		System.out.println("도형을 그립니다.");
+	}
+}
+
+class Line2 extends Shape2 {
+	
+	@Override
+	void draw() {
+		System.out.println("선을 그립니다.");
+	}
+}
+
+class Rect2 extends Shape2 {
+	
+	@Override
+	void draw() {
+		System.out.println("네모를 그립니다.");
+	}
+}
+
+class Circle2 extends Shape2 {
+	
+	@Override
+	void draw() {
+		System.out.println("원을 그립니다.");
+	}
+}
+
+public class Inher11 {
+	public static void main(String[] args) {
+		
+		/*
+		 								obj-->			obj-->
+			start ----> next   --->		next	---->	next
+						draw()			draw()			draw()
+						----			----			----
+						draw()			draw()			Line
+			
+			last ----->
+			last ---------------------->
+			last ------------------------------------>
+		*/
+		
+		Shape2 start, last, obj;
+		
+		
+		start = new Line2(); // 업캐스팅
+		last = start; // 전달                               // Shape last = new Line2();
+		
+		obj = new Rect2(); // 업캐스팅
+		last.next = obj; // Rect2에서 업캐스팅 next last.next = new Rect2();
+		last = obj; // Shape last 에 전달
+		
+		obj = new Line2(); // 업캐스팅
+		last.next = obj; // Line2에서 업캐스팅 next
+		last = obj; // Rect2의 업캐스팅 된 last에  Line2에서 업캐스팅 된 obj를 전달
+		
+		obj = new Circle2(); // obj를 업캐스팅
+		last.next = obj; // Rect2의 업캐스팅 된 last에  Line2에서 업캐스팅 된 obj를 Circle의 업캐스팅 된것을 전달 next에
+		last = obj; // 위에서 next만 빼고
+		
+		// 출력
+		Shape2 p = start; // Line에서 시작
+		while(p != null) {
+			p.draw(); 
+			p = p.next;
+		}
+		
+	}
+}
+
+```
+
+### 추상클래스 상속
+
+클래스 안에 추상클래스를 담아서 메서드 출력하는 코드
+```java
+public class ExampleClass {
+  
+  // 추상 클래스 정의
+  abstract class AbstractClass {
+    public abstract void abstractMethod();
+  }
+  
+  // 추상 클래스를 상속받은 구체 클래스 정의
+  class ConcreteClass extends AbstractClass {
+    @Override
+    public void abstractMethod() {
+      // 추상 메소드 구현
+      System.out.println("Abstract method implemented in ConcreteClass");
+    }
+  }
+  
+  public static void main(String[] args) {
+    // 추상 클래스를 상속받은 구체 클래스 인스턴스 생성
+    ConcreteClass concreteObject = new ConcreteClass();
+    // 추상 메소드 호출
+    concreteObject.abstractMethod();
+  }
+}
+```
+
