--- a/3월 2주차/3월 7일.MD
+++ b/3월 2주차/3월 7일.MD
@@ -114,7 +114,17 @@ public class Inher11 {
 
 ```
 
-### 추상클래스 상속
+### 추상클래스
+추상 클래스의 ***단순 상속***
+- 추상 클래스를 상속받아, 추상 메소드를 구현하지 않으면 추상 클래스 됨
+- 서브 클래스도 abstract로 선언해야 함
+
+추상 클래스 ***구현상속***
+- 서브 클래스에서 ***슈퍼 클래스의 추상 메소드 구현(오버라이딩)***
+- 서브 클래스는 추상 클래스 아님
+
+추상클래스의 객체생성은 구현후에 가능하다. 
+
 
 클래스 안에 추상클래스를 담아서 메서드 출력하는 코드
 ```java
@@ -143,3 +153,61 @@ public class ExampleClass {
 }
 ```
 
+오랜만에 문제 빠르게 풀었다... 추상클래스 사용해서 문제 만듬
+```java
+package step2_추상클래스;
+
+abstract class Calculator {
+	
+	public abstract int add(int a, int b);
+	public abstract int subtract(int a, int b);
+	public abstract double average(int[] a);
+}
+
+class Cacul extends Calculator {
+	
+	@Override
+	public int add(int a, int b) {
+		int sum = 0;
+		sum += a+b;
+		return sum;
+	}
+	
+	@Override
+	public int subtract(int a, int b) {
+		int sum = 0;
+		
+		if(a>b) {
+			sum -= a-b;
+		} else if (a<b) {
+			sum -= b-a;
+		}
+		return sum;
+	}
+	
+	@Override
+	public double average(int[] a) {
+		int sum = 0;
+		double result = 0;
+		
+		for(int i=0;i<a.length;i++) {
+			sum += a[i];
+		}	
+		result = (double)sum / a.length;	
+		return result;		
+	}	
+}
+
+
+public class Abstract1Ex {
+	public static void main(String[] args) {
+		
+		Cacul ca = new Cacul();
+		
+		System.out.println(ca.add(3, 5));
+		System.out.println(ca.subtract(5, 10));
+		System.out.println(ca.average(new int[] {3,4,5,6,7}));
+	}
+}
+
+```
