--- a/3월 2주차/3월 7일.MD
+++ b/3월 2주차/3월 7일.MD
@@ -169,7 +169,7 @@ class Cacul extends Calculator {
 	@Override
 	public int add(int a, int b) {
 		int sum = 0;
-		sum += a+b;
+		sum = a+b;
 		return sum;
 	}
 	
@@ -178,9 +178,9 @@ class Cacul extends Calculator {
 		int sum = 0;
 		
 		if(a>b) {
-			sum -= a-b;
+			sum = a-b;
 		} else if (a<b) {
-			sum -= b-a;
+			sum = b-a;
 		}
 		return sum;
 	}
