--- a/3월 2주차/3월 7일.MD
+++ b/3월 2주차/3월 7일.MD
@@ -211,3 +211,24 @@ public class Abstract1Ex {
 }
 
 ```
+
+### DecimalFormat 보는 코드
+```java
+DecimalFormat df = new DecimalFormat("#,###.#");
+		for(Shape t : sa) {
+			t.draw();
+			String value = df.format(t.computeArea(10.2, 11.5));
+			System.out.println(value);
+		}
+```
+
+
+## 인터페이스
+S/W를 규격화된 모듈로 만들고, 서로 인터페이스가 맞는 모듈을 조립하듯이 프로그램을 작성해 나갈 수 있다.
+- 추상 메소드가 구현되어야 객체를 생성할 수 있다.
+- implements하면 클래스가 되지만, extends하면 인터페이스이다.
+- 상속받는 인터페이스는 다중 상속(extends)할 수 있다.
+- 구현하는 클래스는 인터페이스를 다중 구현(implements)할 수 있다.
+- 업캐스팅 / 오버라이딩도 가능하다
+
+
