--- a/3월 2주차/3월 7일.MD
+++ b/3월 2주차/3월 7일.MD
@@ -231,4 +231,63 @@ S/W를 규격화된 모듈로 만들고, 서로 인터페이스가 맞는 모듈
 - 구현하는 클래스는 인터페이스를 다중 구현(implements)할 수 있다.
 - 업캐스팅 / 오버라이딩도 가능하다
 
+### static 인지 private인지 잘 알아두기!!!
 
+### interface (interface 활용)
+- interface로 가교 역할
+- 향상for문에 instance of 적용
+- instance of문에 다운캐스팅 적용시 코드 한줄이라도 더 줄이면서 할 수 있는 방법
+```java
+package step3_인터페이스;
+
+interface Robot {}
+
+class DanceRobot implements Robot {
+
+	void dance() {
+		System.out.println("춤을 춥니다.");
+	}
+	
+}
+
+class DrawRobot implements Robot {
+	
+	void draw() {
+		System.out.println("그림을 그립니다.");
+	}
+}
+
+class SingRobot implements Robot {
+	
+	void sing() {
+		System.out.println("노래를 부릅니다.");
+	}
+}
+
+public class RobotInterface {
+	public static void main(String[] args) {
+		
+		Robot[] rb = new Robot[3];
+		rb[0] = new DanceRobot();
+		rb[1] = new DrawRobot();
+		rb[2] = new SingRobot();
+		
+		for(Robot a : rb) {
+			if(a instanceof DanceRobot) {
+				DanceRobot aa = (DanceRobot)a;
+				aa.dance();
+			} else if (a instanceof DrawRobot) {
+//				DrawRobot aa = (DrawRobot) a;
+//				aa.draw();
+				((DrawRobot)a).draw();
+				
+			} else if (a instanceof SingRobot) {
+//				SingRobot aa = (SingRobot) a;
+//				aa.sing();
+				((SingRobot)a).sing();
+			}
+		}
+	}
+}
+// interface는 그냥 만드는거였어 왜냐면 interface가 가교 역할을 해줘서 향상 for문을 출력할 수 있게 만들어줌
+```
