--- a/3월 2주차/3월 7일.MD
+++ b/3월 2주차/3월 7일.MD
@@ -290,4 +290,133 @@ public class RobotInterface {
 	}
 }
 // interface는 그냥 만드는거였어 왜냐면 interface가 가교 역할을 해줘서 향상 for문을 출력할 수 있게 만들어줌
+
+----------------------------------------------------------------------------------------------------------
+
+public class RobotInterface {
+	
+	static void action(Robot a) {
+		if(a instanceof DanceRobot) {
+			DanceRobot aa = (DanceRobot)a;
+			aa.dance();
+		} else if (a instanceof DrawRobot) {
+//			DrawRobot aa = (DrawRobot) a;
+//			aa.draw();
+			((DrawRobot)a).draw();
+			
+		} else if (a instanceof SingRobot) {
+//			SingRobot aa = (SingRobot) a;
+//			aa.sing();
+			((SingRobot)a).sing();
+		}
+	}
+	
+	public static void main(String[] args) {
+		
+		Robot[] rb = new Robot[3];
+		rb[0] = new DanceRobot();
+		rb[1] = new DrawRobot();
+		rb[2] = new SingRobot();
+		
+		for(Robot a : rb) {
+			action(a); // static 키워드를 넣어야 사용가능함 애초에 main이 static 이니까
+		}
+	}
+}
+
+
+```
+
+### Singleton (중요)
+```java
+package step4_싱글톤;
+
+// 싱글톤
+class Company {
+	
+	private static Company instance = new Company(); // new Company(); 없으면 안되는건가??
+	
+	private Company() {} // getInstance만 불러오게 막아버림 private 걸어서
+	
+	
+	public static Company getInstance() {
+		if (instance == null) {
+			instance = new Company();
+		}
+		return instance;
+	}
+	
+}
+
+
+public class CompanyEx {
+	public static void main(String[] args) {
+//		Company instance = new Company();
+		
+		Company c1 = Company.getInstance();
+		Company c2 = Company.getInstance();
+		Company c3 = Company.getInstance();
+		
+		System.out.println(c1); // 같은
+		System.out.println(c2); // 주소에
+		System.out.println(c3); // 있다
+		
+	}
+}
+```
+
+### 포함관계 기본코드
+```java
+package step5_포함관계;
+
+class Engine {
+	String type;
+	int cc;
+	
+	public Engine(String type, int cc) {
+		this.type = type;
+		this.cc = cc;
+	}
+	
+	void print() {
+		System.out.println("타  입 : " + type);
+		System.out.println("배기량: " + cc + "cc");
+	}
+}
+
+class Car {
+	String kind;
+	Engine eg;
+	
+	Car(String kind, Engine eg) {
+		this.kind = kind;
+		this.eg = eg;
+	}
+	
+	void print() {
+		System.out.println("차   종: " + kind);
+		eg.print();
+		System.out.println("======================");
+	}
+	
+}
+
+public class In1Ex {
+	public static void main(String[] args) {
+		
+		Engine eg1 = new Engine("알파엔진", 2000);
+		Engine eg2 = new Engine("베타엔진", 3000);
+		
+		Car c1 = new Car("Jeep", eg1);
+		Car c2 = new Car("랜드로버", eg2);
+		Car c3 = new Car("제네시스", eg1);
+		
+		c1.print();
+		c2.print();
+		c3.print();
+		
+		
+	}
+}
+
 ```
