--- a/3월 2주차/3월 7일.MD
+++ b/3월 2주차/3월 7일.MD
@@ -25,6 +25,11 @@
 
 --------------------------------------------------------------------------------
 
+## 오늘 알게된것, 해야할 것
+- 추상
+- 인터페이스
+- JFrame 진동 코드 보면서 한번 만들어보는것도 좋을
+
 상속관계
 - a는 b이다
 
