--- a/3월 2주차/3월 8일.MD
+++ b/3월 2주차/3월 8일.MD
@@ -1,12 +1,31 @@
 ### Review
-상속
-- 부모의 필드와 메소드는 자식의 것이 된다.
+추상
+- 메소드의 구현부만 있는 것을 추상 메소드라고 한다.
+- 추상메소드는 abstract으로 선언된다.
+- 하나라도 abstract메소드가 있으면 그 클래스는 abstract클래스이다.
+- abstract를 상속받은 클래스도 abstract클래스이다.
+- abstract은 구현 {}되어야 객체화 할 수 있다.
+- 추상필드 이런건 없음
 
+인터페이스
+- 상수, abstract메서드, default, private, static 메서드로 구현되어 있다.
+- public abstract는 생략할 수 있다.
+- 인터페이스는 implements를 활용해서 class에서 다중 구현할 수 있다.
+- 인터페이스끼리는 extends를 통해 다중 상속 할 수 있다.
+
+포함관계
+- 클래스가 다른 클래스의 부분으로 활용되는 구조이다.
+- 각각의 클래스 객체를 선언해서 생성자의 매개변수를 활용해서 포함해 올 수 있다.
+- 이를 통해 클래스간의 의존성을 낮출 수 있다.
 
 ## 오늘의 학습목표
 학습 내용
-- ***추상클래스*** 를 이해하고 구현할 수 있다.
-
+- ***내부클래스*** 를 이해하고 구현할 수 있다.
+- ***익명클래스***를 이해하고 구현할 수 있다.
+- ***람다함수***를 구현할 수 있다.
 
 공지사항
 - 포트폴리오
+
+--------------------------------------------------------------------------------------------------------
+포트폴리오에서 내가 이 프로젝트를 한 이유? 여기서 내가 무엇을 했는가? 어떤 오류를 처리해봤는가? 더 알게된것은 무엇인가? 더 나아가 무엇을 해볼것인가? 코드를 왜 이런식으로 짯는가? 등등 이유를 말해줘야함 그래야 면접관도 그에 대한 질문을 할 수있음 ( 내가 만들었던 인스타그램 코딩 노션에 올렸던거 예시로 써보자 )
