--- a/3월 2주차/3월 8일.MD
+++ b/3월 2주차/3월 8일.MD
@@ -29,3 +29,6 @@
 
 --------------------------------------------------------------------------------------------------------
 포트폴리오에서 내가 이 프로젝트를 한 이유? 여기서 내가 무엇을 했는가? 어떤 오류를 처리해봤는가? 더 알게된것은 무엇인가? 더 나아가 무엇을 해볼것인가? 코드를 왜 이런식으로 짯는가? 등등 이유를 말해줘야함 그래야 면접관도 그에 대한 질문을 할 수있음 ( 내가 만들었던 인스타그램 코딩 노션에 올렸던거 예시로 써보자 )
+
+
+코딩을... 너무어렵게 생각하지말자... 처음에 내가 아는선에서 하는게 나을수 있다.
